# brainstack

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HALT.md  HARDENING_REPORT.md  LICENSE  Makefile  NOTICE  PRIVACY_AUDIT_v0.1.0.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  UPSTREAM.md  install.sh  pyproject.toml  requirements-dev.txt  server.json  uninstall.sh  upgrade.sh
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
adapters/claude-code/: README.md  settings.snippet.json
agent/: __init__.py
agent/dream/: __init__.py  registry.py
agent/memory/: _atomic.py  auto_dream.py  claim_overrides.py  claims.py  cluster.py  consolidate.py  llm_extractor.py  projection.py  promote.py  render_lessons.py  review_state.py  sdk.py  source_ts.py  topic_keys.py
agent/tools/: _digest_render.py  _redact_common.py  _session_normalize.py  auto_migrate_install.py  backfill_origin.py  check_freshness.py  claude_misc_adapter.py  claude_session_adapter.py  claude_session_digest_adapter.py  codex_adapter.py  cursor_adapter.py  data_layer_export.py  demote.py  digest_cli.py  discover_all_sources.py  dream_runner.py  graduate.py  migrate.py  migrate_dispatcher.py  proactive_context.py  profile_builder.py  promote.py  prune_legacy_meta_prompts.py  redact.py  redact_jsonl.py  reject.py  render_codex_agents_md.py  render_cursor_rules.py  render_pending_summary.py  rollback.py  scrub_employer.py  sdk_cli.py  statusline.py  sweep_activity_log_residue.py  sync.sh  sync_claude_extras.py  theme_cluster.py  triage_candidates.py
demo/: demo.tape  make_demo_brain.py
docs/: architecture.md  claude-code-setup.md  dream-cycle.md  git-sync.md  hook-precedence.md  memory-model.md  operational-notes.md  privacy-audit.md  redaction-policy.md  releasing.md  runtime.md
docs/history/: PRIVACY_AUDIT_v0.1.0.md  README.md
eval/: README.md  RESULTS.md  auto_recall_harness.py  bench_dataset.json  bench_recall_ab.py  load_test_locking.py
recall/: README.md  __init__.py  cli.py  config.py  core.py  expand.py  forget.py  frontmatter.py  fusion.py  index.py  lint.py  mcp_server.py  migrate.py  qdrant_backend.py  remember.py  sanitize.py  serialize.py  sources.py  stats.py
runtime/: __init__.py
runtime/_empirical/: README.md  data-policy.md  phase0-empirical.md
runtime/_review_outputs/: .gitignore  PR_DRAFT.md  SUMMARY.md  phase3-SUMMARY.md  phase6-SUMMARY.md
runtime/adapters/: __init__.py
runtime/core/: __init__.py  budget.py  events.py  locking.py  manifest.py  replay.py  tokens.py
schemas/: lessons.schema.json
templates/: MEMORY.md.template  PREFERENCES.md.template  brain-secret-scan.yml  brain.gitignore  brainstack-shell-banner.sh  brainstack-wrapped-tools.txt  com.brainstack.claude-extras.plist  com.user.agent-dream.plist  com.user.agent-sync.plist  dream-command.md.template  pre-commit  recall-first.md  redact-private.example.txt  trufflehog-exclude.txt
templates/systemd/: brainstack-auto-migrate.service  brainstack-auto-migrate.timer  brainstack-dream.service  brainstack-dream.timer  brainstack-sync.service  brainstack-sync.timer
tests/: conftest.py  test_activity_log_filter.py  test_atomic.py  test_auto_migrate.py  test_backfill_origin.py  test_bench_dataset.py  test_burst_filter.py  test_check_freshness.py  test_claims_log_replay.py  test_cluster.py  test_codex_adapter.py  test_concurrent_appends.py  test_concurrent_appends_claims.py  test_consolidate_acceptance.py  test_cursor_adapter.py  test_demote.py  test_digest_render.py  test_distribution_readiness_dev_install.py  test_distribution_readiness_golden_fixtures.py  test_distribution_readiness_install_sh.py  test_docs_truth.py  test_dream_registry.py  test_dream_runner.py  test_hook_precedence.py  test_install_brain_remote.py  test_install_consent.py  test_install_defaults_flip.py  test_install_dry_run.py  test_install_hardening.py  test_install_minimal.py  test_install_recall_first.py  test_llm_extractor.py  test_llm_providers.py  test_migrate.py  test_migrate_dispatcher.py  test_namespaced_concurrent_appends.py  test_namespaced_tools.py  test_new_adapters.py  test_pipeline_e2e.py  test_post_execution.py  (+22 more)
tests/recall/: BENCH_RESULTS.md  bench_baseline.json  bench_compare.py  bench_e2e.py  bench_memory_quality.py  conftest.py  eval_expansion.py  (+31 more)
(+60 files in other folders)
