[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "recall-brain"
version = "0.1.0"
description = "Tool-agnostic memory retrieval for AI coding assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["memory", "retrieval", "rag", "bm25", "mcp", "ai-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "qdrant-client[fastembed]>=1.13",
    "typer>=0.12",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
# `embeddings` is kept as a no-op alias so existing install commands don't break;
# Qdrant + FastEmbed are now hard deps because retrieval doesn't work without them.
embeddings = []
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.5",
]

[project.scripts]
recall = "recall.cli:app"
recall-mcp = "recall.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["recall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --import-mode=importlib"
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "embeddings: tests requiring sentence-transformers (heavy)",
    "mcp: tests requiring mcp library",
    "timeout(seconds): per-test wall-clock bound (no-op without pytest-timeout)",
]

[tool.coverage.run]
source = ["recall"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
